glx/testdata/invalid/missing-required-fields/sources/source-missing-title.glx
sources:
  source-missing-title:
    type: book


